<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".album.view.AlbumDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/album_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/backImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="---"
            android:layout_marginStart="10dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/closeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/album_cover_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/album_released_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_cover_image"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                tools:text="Fecha de lanzamiento"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/album_genre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_released_date_text"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                tools:text="Genero XXXXX"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/album_record_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_genre_text"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                tools:text="Record Label"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/album_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_record_label_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                tools:text="Description: Supporting line text lorem ipsum dolor sit amt "/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/commentButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:cornerRadius="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/gray"
                app:backgroundTint="@android:color/white"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                android:textColor="@color/black"
                android:text="Comentar"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_description_text"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>