<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".collector.view.CollectorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/collector_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/backImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="---"
            android:layout_marginStart="10dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/closeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/collector_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/collector_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collector_image"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                tools:text="Email"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/collector_telephone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collector_email_text"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                tools:text="Phone"/>

            <!-- Sección de Álbumes -->
            <TextView
                android:id="@+id/albums_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Álbumes"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/collector_telephone_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albums_recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/albums_section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintWidth_default="wrap" />

            <!-- Sección de Favoritos -->
            <TextView
                android:id="@+id/favorites_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Favoritos"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/albums_recyclerview"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorites_recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/favorites_section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintWidth_default="wrap" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
